chore(tailwind): add a rickety version

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Page title</title>
+    <link rel="stylesheet" href="/styles/tailwind.css" />
   </head>
   <body>
-    <p>Hi playa</p>
+    <p class="text-gray-900">Hi playa</p>
   </body>
 </html>
