feat(tailwind): configure with no purge

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Page title</title>
-    <link rel="stylesheet" href="/styles/tailwind.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <p class="text-gray-900">Hi playa</p>
